# TinyQuant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  layerwise_sensitivity.py  requirements.txt  run_model_inspection.bat
.github/workflows/: build.yml
analysis/: baseline.py  plot_quantization_regions.py  plot_sensitivity.py  sensitivity.py  sensitivity_analysis.py
cmake/options/: BuildOptions.cmake
notebooks/: 00_baseline_gsm8k_eval.ipynb  01_layer_sensitivity.ipynb  02_evaluation_gsm8k_baseline.ipynb  03_evaluation_gsm8k_naive.ipynb
phi-run/baseline/: gsm8k_baseline_checkpoint.jsonl  gsm8k_baseline_summary.json
phi-run/naive/: blind2.jsonl  blind3.jsonl  blind4.jsonl  gsm8k_naive.jsonl
phi-run/pct15/: gsm8k_selective_pct_fisher_pct15_checkpoint.jsonl  gsm8k_selective_pct_fisher_pct15_summary.json
phi-run/selective/: gsm8k_selective_block_aware_fisher_block15.jsonl  gsm8k_selective_block_aware_fisher_block15_block_structure.txt  gsm8k_selective_block_aware_fisher_block15_checkpoint.jsonl  gsm8k_selective_block_aware_fisher_block30.jsonl  gsm8k_selective_block_aware_fisher_block30_block_structure.txt  gsm8k_selective_block_aware_fisher_block30_checkpoint.jsonl  (+1 more)
results/maps/: fisher_gsm8k.json  summary.json  (+6 more)
runtime/: CMakeLists.txt
scripts/: 01_compute_sensitivity.py  02_quant_bench.py  02_quant_bench_qwen.py  03_quant_bench_llama.py  03_quant_bench_qwen2_5_3b.py  04_quant_bench_phi.py  05_quant_bench_stablelm.py  06_quant_bench_llama_3b.py  patch_fisher_map.py
src/: config.py  gguf-inspection.cpp  model-inspection.cpp
tests/: test_loader.py
(+80 files in other folders)
